Fixed sticky header and updated layout on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -198,9 +198,8 @@ img {
 
 /*Table styling*/
 table {
-	overflow: hidden;
 	border-collapse: collapse;
-	table-layout: auto;
+	table-layout: fixed;
 	width: 95%;
 	margin: 2rem 2.5% 1rem 2.5%;
 }
@@ -210,7 +209,12 @@ thead tr {
 	text-align: left;
 	background: rgba(200, 200, 200, 0.4);
 	-webkit-backdrop-filter: blur(5px);
-	backdrop-filter: blur(5px);
+	backdrop-filter: blur(5px); 
+}
+
+thead {
+	position: sticky;
+	top: 0rem;
 }
 
 table th,
@@ -228,7 +232,18 @@ table td {
 th:first-child,
 td:first-child {
 	padding-left: 0.75rem;
-	max-width: 50vw;
+}
+
+.wide-col {
+	width: 30vw;
+}
+
+.narrow-col {
+	width: 11vw;
+}
+
+.normal-col {
+	width: 21vw;
 }
 
 tbody>tr {
@@ -573,6 +588,6 @@ label {
 	}
 	
 	.large-screen-only{
-		display: block;
+		display: table-cell;
 	}
 }
